--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         
       "
     >
-    <div class="con">
+    <div class="container-lg">
       <div class="text">
         <p class="margin-line "><span class="hi">Hi, I'm</span> &nbsp; <span class="typing-demo carla ">carla.</span>
           <p class="aspiring">an aspiring front-end developer.</p>
